# merge-sqlite

./: .secrets.baseline  .travis.yml  Dockerfile  Makefile  README.md  dev-requirements.txt  main.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docker/: Dockerfile
merge_sqlite/: __main__.py  main.py
