[metadata]
name = merge_sqlite
description = Tool to merge sqlite databases
license_files =
	LICENSE
author = Charles Czysz
author_email = czysz@uchicago.edu
url = https://github.com/NCI-GDC/merge-sqlite
long_description = file:README.md
long_description_content_type = text/markdown
python_requires = >=3.8
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
install_requires =
zip_safe = False
include_package_data = True
packages = find:
setup_requires = 
	setuptools_scm>=6.0


[options.entry_points]
# Update me
console_scripts =
        merge_sqlite = merge_sqlite.__main__:main

[coverage:run]
# Update me
source = merge_sqlite
branch = true
parallel = true

[coverage:report]
show_missing = true
omit =
        .tox/*
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*return NotImplemented\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$
